--- a/css/login.css
+++ b/css/login.css
@@ -38,6 +38,7 @@ margin-top:0.5em;
 	background:rgb(179, 130, 224);
     display: inline-block;
 	width:10em;
+    height: 3em;
     position: relative;
     margin: auto;
     padding: 1em;
